--- a/android-engineer.html
+++ b/android-engineer.html
@@ -46,6 +46,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/twitch/jobs/4493868002'>Job Application for Android Engineer at Twitch</a></h5> 
+<p><span class="badge badge-light">San Francisco, CA</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/tealium/97fb69fe-f024-4480-bfe5-4ddf2e9e24ad'>Tealium - Senior Android Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-10-28</p>
@@ -177,7 +181,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Minneapolis, Minnesota  Chicago, Illinois  Phoenix, Arizona</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dahmakan/jobs/4005607002'>Job Application for Android Engineer at dahmakan</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dahmakan/jobs/4005607002'>Job Application for Android Engineer at dahmakan</a></h5> 
 <p><span class="badge badge-light">Malaysia</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -197,7 +201,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/codelitt-incubator/j/A88CCE4117/'>Android/iOS Engineer - Codelitt Incubator</a></h5> 
+<h5><a href='https://apply.workable.com/codelitt-incubator/j/A88CCE4117/'>Android/iOS Engineer - Codelitt Incubator</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Great communication and English skills; Great iOS or Android experience with 
 code to prove it; Javascript experience a plus; You know how to architect all?...</p>
@@ -230,7 +234,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/M-TRIBESGmbH/743999697341092-senior-android-engineer-m-f-d-nis'>M-TRIBES GmbH Senior Android Engineer (m/f/d) - Ni? | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/M-TRIBESGmbH/743999697341092-senior-android-engineer-m-f-d-nis'>M-TRIBES GmbH Senior Android Engineer (m/f/d) - Ni? | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -249,7 +253,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/lextechglobalservices/jobs/4475163002'>Job Application for Android/Kotlin Software Engineer - Contractor at Lextech Global Services</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lextechglobalservices/jobs/4475163002'>Job Application for Android/Kotlin Software Engineer - Contractor at Lextech Global Services</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -309,7 +313,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">San Francisco, CAUnited States</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://intellectsoft.workable.com/j/40777FEDAC'>Intellectsoft - Jobs: Senior Android Engineer - Apply online</a></h5> 
+<h5><a href='https://intellectsoft.workable.com/j/40777FEDAC'>Intellectsoft - Jobs: Senior Android Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Kyiv Kyiv city, Ukraine Palo Alto</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
@@ -317,7 +321,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Berlin  Berlin</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999696938629-senior-android-engineer-blablalines'>BlaBlaCar Senior Android Engineer - BlaBlaLines | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999696938629-senior-android-engineer-blablalines'>BlaBlaCar Senior Android Engineer - BlaBlaLines | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -329,11 +333,11 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e581879'>Stellenangebot: Android Application Engineer (m/w/x) (Bonn) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e581879'>Stellenangebot: Android Application Engineer (m/w/x) (Bonn) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ontruck.workable.com/j/2FD542F357'>Ontruck - Jobs: Android Engineer - Apply online</a></h5> 
+<h5><a href='https://ontruck.workable.com/j/2FD542F357'>Ontruck - Jobs: Android Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Madrid Madrid, Spain</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -397,7 +401,7 @@ mission to help parents teach financial literacy to kids.</p>
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/newrelic/job/o2JgbfwW'>New Relic Careers - Senior Android Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/newrelic/job/o2JgbfwW'>New Relic Careers - Senior Android Software Engineer</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
@@ -457,10 +461,6 @@ work on innovative mobile projects that would impact tens of millions of people'
 <hr/>
 <h5><a href='https://poq.workable.com/j/BCC844BCEB'>Poq - Jobs: Android Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
-<p>Posted on: 2019-10-02</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/offerup/jobs/1895404'>Job Application for Android Engineer Intern - Summer 2020 at OfferUp</a></h5> 
-<p><span class="badge badge-light">Bellevue, WA</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
 
